# biogather

./: CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/: SUPPORT.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-question.yml  03-feature-request.yml  config.yml
docs/: index.md
src/biogather/: __init__.py  entity_extraction.py  linguistic_annotation.py  preprocessing.py  relationship_extraction.py  utils.py
tests/system/: test_import.py
tests/unit/: test_entity_extraction.py  test_linguistic_annotation.py  test_preprocessing.py  test_relationship_extraction.py
